[gd_scene load_steps=23 format=2]

[ext_resource path="res://Fonts/Pixellari.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Fonts/CurAmmoFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/GUI/GUI.gd" type="Script" id=3]
[ext_resource path="res://Sprites/GUI/Pause.png" type="Texture" id=4]
[ext_resource path="res://Sprites/GUI/InvBox.png" type="Texture" id=5]
[ext_resource path="res://Fonts/Pixellari16.tres" type="DynamicFont" id=6]
[ext_resource path="res://Sprites/GUI/EnemyMiniMap.png" type="Texture" id=7]
[ext_resource path="res://Sprites/GUI/PlayerMiniMap.png" type="Texture" id=8]
[ext_resource path="res://Sprites/GUI/ItemMiniMap.png" type="Texture" id=9]
[ext_resource path="res://Scenes/Menu/PauseMenuButton.tres" type="StyleBox" id=10]
[ext_resource path="res://Scenes/Menu/PauseMenuButtonHover.tres" type="StyleBox" id=11]
[ext_resource path="res://Scenes/Menu/PauseMenuButtonPressed.tres" type="StyleBox" id=12]
[ext_resource path="res://Fonts/Pausemenu.tres" type="DynamicFont" id=13]
[ext_resource path="res://Fonts/Pausemenutittle.tres" type="DynamicFont" id=14]
[ext_resource path="res://Scenes/GUI/MenuPopoutStyle.tres" type="StyleBox" id=15]
[ext_resource path="res://Scenes/GUI/GUIBack.tres" type="StyleBox" id=16]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.513726, 0, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.25098, 0.25098, 0.25098, 0.780392 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=3]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="VisualShaderNodeColorConstant" id=4]
constant = Color( 0.0692749, 0.123342, 0.443359, 1 )

[sub_resource type="VisualShader" id=5]
code = "shader_type canvas_item;



void vertex() {
// Output:0

}

void fragment() {
// Color:2
	vec3 n_out2p0 = vec3(0.069275, 0.123342, 0.443359);
	float n_out2p1 = 1.000000;

// Output:0
	COLOR.rgb = n_out2p0;

}

void light() {
// Output:0

}
"
graph_offset = Vector2( -70.6667, 151.333 )
mode = 1
flags/light_only = false
nodes/fragment/2/node = SubResource( 4 )
nodes/fragment/2/position = Vector2( 200, 160 )
nodes/fragment/connections = PoolIntArray( 2, 0, 0, 0 )

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 5 )

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="TopLeft" type="PanelContainer" parent="."]
margin_right = 356.0
margin_bottom = 84.0
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory" type="HBoxContainer" parent="TopLeft"]
margin_left = 10.0
margin_top = 10.0
margin_right = 346.0
margin_bottom = 74.0
mouse_filter = 2
size_flags_vertical = 3
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="Slot0" type="TextureButton" parent="TopLeft/Inventory"]
margin_right = 64.0
margin_bottom = 64.0
texture_normal = ExtResource( 5 )

[node name="Icon" type="TextureRect" parent="TopLeft/Inventory/Slot0"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stack" type="Label" parent="TopLeft/Inventory/Slot0"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -14.0
custom_fonts/font = ExtResource( 6 )
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Num" type="Label" parent="TopLeft/Inventory/Slot0"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 6 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot1" type="TextureButton" parent="TopLeft/Inventory"]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 64.0
texture_normal = ExtResource( 5 )
stretch_mode = 3

[node name="Icon" type="TextureRect" parent="TopLeft/Inventory/Slot1"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stack" type="Label" parent="TopLeft/Inventory/Slot1"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -14.0
custom_fonts/font = ExtResource( 6 )
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Num" type="Label" parent="TopLeft/Inventory/Slot1"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 6 )
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot2" type="TextureButton" parent="TopLeft/Inventory"]
margin_left = 136.0
margin_right = 200.0
margin_bottom = 64.0
texture_normal = ExtResource( 5 )
stretch_mode = 3

[node name="Icon" type="TextureRect" parent="TopLeft/Inventory/Slot2"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stack" type="Label" parent="TopLeft/Inventory/Slot2"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -14.0
custom_fonts/font = ExtResource( 6 )
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Num" type="Label" parent="TopLeft/Inventory/Slot2"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 6 )
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot3" type="TextureButton" parent="TopLeft/Inventory"]
margin_left = 204.0
margin_right = 268.0
margin_bottom = 64.0
texture_normal = ExtResource( 5 )
stretch_mode = 3

[node name="Icon" type="TextureRect" parent="TopLeft/Inventory/Slot3"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stack" type="Label" parent="TopLeft/Inventory/Slot3"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -14.0
custom_fonts/font = ExtResource( 6 )
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Num" type="Label" parent="TopLeft/Inventory/Slot3"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 6 )
text = "4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot4" type="TextureButton" parent="TopLeft/Inventory"]
margin_left = 272.0
margin_right = 336.0
margin_bottom = 64.0
texture_normal = ExtResource( 5 )
stretch_mode = 3

[node name="Icon" type="TextureRect" parent="TopLeft/Inventory/Slot4"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stack" type="Label" parent="TopLeft/Inventory/Slot4"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -14.0
custom_fonts/font = ExtResource( 6 )
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Num" type="Label" parent="TopLeft/Inventory/Slot4"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 6 )
text = "5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopRight" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -332.0
margin_bottom = 216.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="TopRight"]
margin_right = 270.0
margin_bottom = 216.0
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 16 )

[node name="MiniMap" type="ColorRect" parent="TopRight/PanelContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 260.0
margin_bottom = 206.0
rect_min_size = Vector2( 250, 180 )
mouse_filter = 2
color = Color( 0, 0, 0, 0.501961 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Player" type="Sprite" parent="TopRight/PanelContainer/MiniMap"]
texture = ExtResource( 8 )

[node name="Enemy" type="Sprite" parent="TopRight/PanelContainer/MiniMap"]
visible = false
texture = ExtResource( 7 )

[node name="Item" type="Sprite" parent="TopRight/PanelContainer/MiniMap"]
visible = false
texture = ExtResource( 9 )

[node name="PanelContainer2" type="PanelContainer" parent="TopRight"]
margin_left = 280.0
margin_right = 332.0
margin_bottom = 52.0
size_flags_vertical = 0
custom_styles/panel = ExtResource( 16 )

[node name="Pause" type="TextureButton" parent="TopRight/PanelContainer2"]
margin_left = 10.0
margin_top = 10.0
margin_right = 42.0
margin_bottom = 42.0
size_flags_horizontal = 10
size_flags_vertical = 4
texture_normal = ExtResource( 4 )
stretch_mode = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BottomRow" type="HBoxContainer" parent="."]
anchor_left = 0.03
anchor_top = 0.85
anchor_right = 0.97
anchor_bottom = 0.97
margin_top = -131.0
mouse_filter = 2
size_flags_vertical = 3
custom_constants/separation = 50
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="HealthBar" type="ProgressBar" parent="BottomRow"]
margin_top = 167.0
margin_right = 600.0
margin_bottom = 217.0
rect_min_size = Vector2( 600, 50 )
mouse_filter = 2
size_flags_vertical = 8
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
value = 76.0

[node name="Tween" type="Tween" parent="BottomRow/HealthBar"]

[node name="BInv" type="VBoxContainer" parent="BottomRow"]
margin_left = 650.0
margin_right = 1203.0
margin_bottom = 217.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="AmmoSection" type="HBoxContainer" parent="BottomRow/BInv"]
margin_right = 553.0
margin_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
size_flags_horizontal = 3

[node name="CurAmmo" type="Label" parent="BottomRow/BInv/AmmoSection"]
margin_right = 34.0
margin_bottom = 32.0
size_flags_horizontal = 0
custom_fonts/font = ExtResource( 2 )
text = "30"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Separator" type="Label" parent="BottomRow/BInv/AmmoSection"]
margin_left = 38.0
margin_right = 72.0
margin_bottom = 32.0
size_flags_horizontal = 0
custom_fonts/font = ExtResource( 2 )
text = " / "
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxAmmo" type="Label" parent="BottomRow/BInv/AmmoSection"]
margin_left = 76.0
margin_right = 110.0
margin_bottom = 32.0
size_flags_horizontal = 0
custom_fonts/font = ExtResource( 2 )
text = "30"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top" type="PanelContainer" parent="BottomRow/BInv"]
margin_top = 42.0
margin_right = 553.0
margin_bottom = 152.0
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
custom_styles/panel = ExtResource( 16 )

[node name="HBox" type="HBoxContainer" parent="BottomRow/BInv/Top"]
margin_left = 10.0
margin_top = 10.0
margin_right = 543.0
margin_bottom = 100.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="BottomRow/BInv/Top/HBox"]
margin_right = 264.0
margin_bottom = 90.0
size_flags_horizontal = 3
texture = ExtResource( 5 )
patch_margin_left = 17
patch_margin_top = 12
patch_margin_right = 15
patch_margin_bottom = 10

[node name="NinePatchRect2" type="NinePatchRect" parent="BottomRow/BInv/Top/HBox"]
margin_left = 268.0
margin_right = 533.0
margin_bottom = 90.0
size_flags_horizontal = 3
texture = ExtResource( 5 )
patch_margin_left = 17
patch_margin_top = 12
patch_margin_right = 15
patch_margin_bottom = 10

[node name="Bottom" type="PanelContainer" parent="BottomRow/BInv"]
margin_top = 162.0
margin_right = 553.0
margin_bottom = 217.0
size_flags_vertical = 3
custom_styles/panel = ExtResource( 16 )

[node name="HBox" type="HBoxContainer" parent="BottomRow/BInv/Bottom"]
margin_left = 10.0
margin_top = 10.0
margin_right = 543.0
margin_bottom = 45.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="BottomRow/BInv/Bottom/HBox"]
margin_right = 352.0
margin_bottom = 35.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
texture = ExtResource( 5 )
patch_margin_left = 17
patch_margin_top = 12
patch_margin_right = 15
patch_margin_bottom = 10

[node name="NinePatchRect2" type="NinePatchRect" parent="BottomRow/BInv/Bottom/HBox"]
margin_left = 356.0
margin_right = 533.0
margin_bottom = 35.0
size_flags_horizontal = 3
texture = ExtResource( 5 )
patch_margin_left = 17
patch_margin_top = 12
patch_margin_right = 15
patch_margin_bottom = 10

[node name="PausePop" type="PopupPanel" parent="."]
pause_mode = 2
margin_left = -0.629974
margin_top = -0.629944
margin_right = 639.37
margin_bottom = 359.37
rect_min_size = Vector2( 640, 360 )
custom_styles/panel = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PausePop"]
material = SubResource( 6 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = -30.0
alignment = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PausePop/VBoxContainer"]
margin_top = 78.0
margin_right = 580.0
margin_bottom = 114.0
custom_fonts/font = ExtResource( 14 )
text = "Paused"
align = 1

[node name="Resume" type="Button" parent="PausePop/VBoxContainer"]
margin_top = 118.0
margin_right = 580.0
margin_bottom = 150.0
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 12 )
custom_styles/normal = ExtResource( 10 )
custom_fonts/font = ExtResource( 13 )
text = "Resume"

[node name="Options" type="Button" parent="PausePop/VBoxContainer"]
margin_top = 154.0
margin_right = 580.0
margin_bottom = 186.0
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 12 )
custom_styles/normal = ExtResource( 10 )
custom_fonts/font = ExtResource( 13 )
text = "Options"

[node name="TitleScreen" type="Button" parent="PausePop/VBoxContainer"]
margin_top = 190.0
margin_right = 580.0
margin_bottom = 222.0
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 12 )
custom_styles/normal = ExtResource( 10 )
custom_fonts/font = ExtResource( 13 )
text = "Title Screen"

[connection signal="gui_input" from="TopLeft/Inventory/Slot0" to="." method="_on_slot_gui_input" binds= [ 0 ]]
[connection signal="gui_input" from="TopLeft/Inventory/Slot1" to="." method="_on_slot_gui_input" binds= [ 1 ]]
[connection signal="gui_input" from="TopLeft/Inventory/Slot2" to="." method="_on_slot_gui_input" binds= [ 2 ]]
[connection signal="gui_input" from="TopLeft/Inventory/Slot3" to="." method="_on_slot_gui_input" binds= [ 3 ]]
[connection signal="gui_input" from="TopLeft/Inventory/Slot4" to="." method="_on_slot_gui_input" binds= [ 4 ]]
[connection signal="pressed" from="TopRight/PanelContainer2/Pause" to="." method="_on_pause_pressed"]
[connection signal="popup_hide" from="PausePop" to="." method="_on_pause_pop_popup_hide"]
[connection signal="pressed" from="PausePop/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PausePop/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="PausePop/VBoxContainer/TitleScreen" to="." method="_on_TitleScreen_pressed"]
